# mockagents

./: .dockerignore  .gitattributes  .gitignore  .goreleaser.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  backlog.md  cov_adapter.out  cov_engine.out  docker-compose.yml  go.mod  go.sum  mock-agents-product-plan.md  progress.md  runbook.md
build_failures/: dockerbuildfailure.md  githubpages.md  gotestfailures.md
conformance/: README.md  expected-failures.yml
docs/: HLD.md  LLD.md  PERFORMANCE.md  PRD.md  PROGRESS.md  REF-07-pipeline-editor-design.md  REF-08-saas-multitenancy-design.md  RELEASING.md  SECURITY-REVIEW-GUI.md  SECURITY-REVIEW.md  api-spec.yaml  architecture-diagrams.md  architecture.md  data-models.md  definition-of-done.md  deployment-plan.md  developer-guide.md  implementation-plan.md  mvp-cut.md  product-backlog.md  sequence-diagrams.md  sprint-backlogs.md  test-plan.md  testing-strategy.md
sdk/python/: .coverage  pyproject.toml
sdk/python/mockagents/: __init__.py  _binary.py  assertions.py  client.py  install.py  launcher.py  pytest_plugin.py  scenario.py  server.py  types.py
sdk/python/mockagents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/mockagents/adapters/: __init__.py  _common.py  crewai.py  langchain.py
sdk/python/tests/: test_adapters.py  test_assertions.py  test_binary.py  test_client.py  test_install.py  test_launcher.py  test_pytest_plugin.py  test_scenario.py  test_server.py  test_types.py
(+583 files in other folders)
