[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mockagents"
version = "0.4.0"
description = "Python SDK for MockAgents — simulate, test, and validate AI agent integrations"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "MockAgents Contributors"}
]
keywords = ["ai", "agents", "testing", "mock", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "responses>=0.25.0",
]
langchain = [
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
]
crewai = [
    "crewai>=0.80.0",
]

[project.scripts]
mockagents = "mockagents.launcher:main"
mockagents-install = "mockagents.install:main"

[project.entry-points.pytest11]
mockagents = "mockagents.pytest_plugin"

[tool.setuptools.packages.find]
include = ["mockagents*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
